# DSA1-Savegame-Editor

./: CMakeLists.txt  README.md  main.cpp
src/: hero.cpp  hero.h  main.cpp  mainwindow.cpp  mainwindow.h  savegame.cpp  savegame.h
